Self_Paced_Exercices/Traffic_Management/External_Egress_HTTPS_Gateway/src/ServiceEntry.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: external-svc-https
spec:
  hosts:
  - ifconfig.me
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: https
    protocol: TLS
  resolution: DNS
